# bookstore

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
bookstore/: settings.py  urls.py  views.py
order/: order_factory.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: product_factory.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
