[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Matheus <matheus.crodrigues@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
faker = "^35.0.0"
factory-boy = "^3.3.1"
django = "^5.1.5"
djangorestframework = "^3.15.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"
gitpython = "^3.1.44"
whitenoise = "^6.8.2"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"